<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="presentacion.RegistroActivity"
    android:background="@drawable/logo">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:background="@color/blanco"
        android:ems="10"
        android:hint="@string/etEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="184dp"
        android:backgroundTint="@color/verde"
        android:onClick="registrarse"
        android:text="@string/btnAceptar"
        android:textColorHint="@color/blanco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContraseñaR"
        app:layout_constraintVertical_bias="0.823" />

    <EditText
        android:id="@+id/etNomUsu"
        android:layout_width="212dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@color/blanco"
        android:ems="10"
        android:hint="@string/etNombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etContraseñaR"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@color/blanco"
        android:ems="10"
        android:hint="@string/etContraseña"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomUsu" />
</androidx.constraintlayout.widget.ConstraintLayout>